Fix navigation mobile button styles

--- a/templates/bootstrap/assets/css/socialveo/custom.scss
+++ b/templates/bootstrap/assets/css/socialveo/custom.scss
@@ -360,3 +360,7 @@ body .navigation.navigation-header.site-header {
     background-image: url(https://socialveo.com/wp-content/themes/helpguru-childtheme/img/headoverlay.png)!important;
     background-color: #00adee!important;
 }
+
+body .navigation-toggle {
+    background-color: #fff;
+}
